--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -39,7 +39,8 @@
   line-height: normal;
 }
 .header .logo-name {
-  font-family: "Agustina Regular";
+  /* font-family: "Agustina Regular"; */
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
   padding: 0 10px;
   /* color: #55198b; */
